<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6C952"
    tools:context=".CadastrarActivity">


    <EditText
        android:id="@+id/etModelo"
        android:layout_width="354dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/btnDigiteaquiaModelo"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etMarca"
        android:layout_width="351dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/btnDigiteaquiaMarca"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etModelo" />


    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:text="@string/btnSalvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPreco" />

    <EditText
        android:id="@+id/editPreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPreco" />

    <TextView
        android:id="@+id/textViewPreco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btnpreco"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idGroup" />


    <TextView
        android:id="@+id/textViewSO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/btnsistemaoperacional"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMarca" />

    <RadioGroup
        android:id="@+id/idGroup"
        android:layout_width="323dp"
        android:layout_height="145dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSO"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/radioSO1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Windows" />

        <RadioButton
            android:id="@+id/radioSO3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Linux" />

        <RadioButton
            android:id="@+id/radioSO2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mac" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>